[package]
name = "leveldb-sys"
version = "2.0.1"
authors = ["Andrew Dunham <andrew@du.nham.ca>", "Florian Gilcher <florian.gilcher@asquera.de>"]

description = "FFI bindings to LevelDB"
repository = "https://github.com/skade/leveldb-sys"
documentation = "https://docs.rs/leveldb-sys/"
license = "MIT"

build = "build.rs"
links = "leveldb"

[dependencies]
libc = "0.2.*"

